stories title clipping bug; remove filter temporarily

--- a/src/sass/pages/_stories.scss
+++ b/src/sass/pages/_stories.scss
@@ -31,7 +31,7 @@
 
         @media (max-width: 1400px) {
           font-size: 200px;
-          height: 220px;
+          height: 230px;
         }
         @media (max-width: 1100px) {
           font-size: 180px;
@@ -58,7 +58,6 @@
 
     &_sub {
       overflow: hidden;
-      margin-top: 10px;
 
       h2 {
         font-size: 50px;
